--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,7 @@ netplan_enabled: true
 # Configured devices get handled by systemd-networkd by default, unless explicitly marked as managed by a specific renderer (NetworkManager)
 netplan_renderer:
 
-netplan_maintained_comment: This file is maintained by Ansible, any changes might not persist.
+netplan_managed_comment: "{{ ansible_managed }}"
 
 netplan_configuration:
   {}
