--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -4,10 +4,10 @@
   vars:
     params:
       files:
-        - '{{ansible_distribution}}-{{ansible_distribution_major_version}}.yaml'
-        - '{{ansible_distribution}}.yaml'
-        - '{{ansible_os_family}}.yaml'
-        - default.yaml
+        - '{{ansible_distribution}}-{{ansible_distribution_major_version}}.yml'
+        - '{{ansible_distribution}}.yml'
+        - '{{ansible_os_family}}.yml'
+        - default.yml
       paths:
         - 'vars'
 
