--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,12 +13,15 @@ netplan_renderer:
 
 netplan_managed_comment: "{{ ansible_managed }}"
 
+# CIDR subnet prefix size
+primary_address_prefix_bits: 24
+
 network: 
   default: true # This key is added to determain if hostvars or otherwise has already overwritten this default value
   ethernets:
     INTERFACE:
       addresses:
-      - "{{ hostvars[inventory_hostname].ansible_host }}/24"
+      - "{{ hostvars[inventory_hostname].ansible_host }}/{{ primary_address_prefix_bits }}"
       gateway4: "{{ default_gateway }}"
       nameservers: "{{ default_nameservers }}"
   version: 2
