--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -4,9 +4,9 @@
   vars:
     params:
       files:
-        - '{{ansible_distribution}}-{{ansible_distribution_major_version}}.yml'
-        - '{{ansible_distribution}}.yml'
-        - '{{ansible_os_family}}.yml'
+        - '{{ansible_facts.distribution}}-{{ansible_facts.distribution_major_version}}.yml'
+        - '{{ansible_facts.distribution}}.yml'
+        - '{{ansible_facts.os_family}}.yml'
         - default.yml
       paths:
         - 'vars'
@@ -14,7 +14,7 @@
 
 - name: Move content of INTERFACE to the correct interface name.
   set_fact:
-    network: "{{ network | combine({'ethernets': { ansible_default_ipv4.interface : network['ethernets']['INTERFACE'] }}, recursive=True) }}"
+    network: "{{ network | combine({'ethernets': { ansible_facts.default_ipv4.interface : network['ethernets']['INTERFACE'] }}, recursive=True) }}"
   when: network.ethernets is defined and network.ethernets.INTERFACE is defined
 
 - name: Remove the INTERFACE key 
